--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <script src="https://cdn.salience.io/peltier/three.min.js"></script>
     <script src="https://cdn.salience.io/peltier/panolens.min.js"></script>
 	 <h4 style="color:skyblue">
- Eid Mubarak❤️
+ Eid Mubarak
   </h4>
     <!--coded by Tanzim Khan Rafi -->
 <!--coded by Tanzim Khan Rafi -->
